manifests/prod/kube-prometheus-stack/Ingress-kube-prometheus-stack-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: kube-prometheus-stack-prometheus
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 81.4.2
    chart: kube-prometheus-stack-81.4.2
    heritage: Helm
    release: kube-prometheus-stack
  name: kube-prometheus-stack-prometheus
  namespace: prometheus
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - kube-prom
